@@ -14,6 +14,7 @@ import resource
 
 import time
 import signal
+import pprint
 import subprocess
 import ConfigParser
 
@@ -135,6 +136,7 @@ class Monitor:
 
         self.main_loop_delay = DFLT_MAIN_LOOP_DELAY
         self.respawn_min_delay = DFLT_RESPAWN_MIN_DELAY
+        self.verbosity = monitor_options.verbosity
 
         self.daemon = not monitor_options.nodaemon
         if self.daemon:
@@ -216,8 +218,33 @@ class Monitor:
                 'post': postcommand,
                 'section': section, }]
 
+    def __print_process_status(self):
+        """ Prints the status of process managed by sl2d. """
+
+        if self.verbosity:
+            self.log.write("Actually running commands (%d)" % len(self.process_list))
+
+        if self.verbosity > 1:
+            self.log.write(pprint.pformat(self.process_list))
+        elif self.verbosity > 0:
+            for pid, process in self.process_list.iteritems():
+                self.log.write('  * %d: %s' % (pid, process['command']['section']))
+
+        if self.verbosity:
+            self.log.write("Scheduled commands for respawn (%d)" % len(self.schedule))
+
+        if self.verbosity > 1:
+            self.log.write(pprint.pformat(self.schedule))
+        elif self.verbosity > 0:
+            for pid, process in self.schedule.iteritems():
+                self.log.write('  * %d: %s' % (pid, process['command']['section']))
+
     def respawn_command(self):
         """ Restart scheduled commands. """
+
+        if self.verbosity:
+            self.log.write('<respawn_command>')
+        self.__print_process_status()
 
         for sched_item in self.schedule.keys():
 
@@ -235,8 +262,15 @@ class Monitor:
             except KeyError:
                 self.log.write('Command that had PID:%d disappeared from the queue.' % sched_item)
 
+        self.__print_process_status()
+        if self.verbosity:
+            self.log.write('</respawn_command>')
+
     def child_shutdown(self, signum, frame):
         """ Respawn command on SIGCHLD. """
+
+        if self.verbosity:
+            self.log.write('Received SIGCHLD')
 
         if frame:
             del frame
@@ -287,6 +321,8 @@ class Monitor:
 
         if frame:
             del frame
+
+        self.__print_process_status()
 
         death_loop = 0
         while len(self.process_list.keys()) > 0 and death_loop < 3:
@@ -355,6 +391,8 @@ class Monitor:
         for command in self.commands:
             self.start_command(command)
 
+        self.__print_process_status()
+
         # Main loop, monitor list of scheduled restarts
         while True:
             time.sleep(self.main_loop_delay)
@@ -413,10 +451,11 @@ if __name__ == "__main__":
 
     parser = optparse.OptionParser(
         version="%prog " + VERSION, option_list=[
-        optparse.Option("-f", "--conf",       dest="conffile", help="Define sl2d conf file", metavar="FILE", default=DFLT_CONFFILE),
-        optparse.Option("-l", "--log",        dest="logfile",  help="Define sl2d log file",  metavar="FILE", default=DFLT_LOGFILE),
-        optparse.Option("-p", "--pid",        dest="pidfile",  help="Define sl2d pid file",  metavar="FILE", default=DFLT_PIDFILE),
-        optparse.Option("-n", "--no-daemon",  dest="nodaemon", help="Define sl2d log file",  action="store_true",  default=False)]
+        optparse.Option("-f", "--conf",       dest="conffile",  help="Define sl2d conf file", metavar="FILE", default=DFLT_CONFFILE),
+        optparse.Option("-l", "--log",        dest="logfile",   help="Define sl2d log file",  metavar="FILE", default=DFLT_LOGFILE),
+        optparse.Option("-p", "--pid",        dest="pidfile",   help="Define sl2d pid file",  metavar="FILE", default=DFLT_PIDFILE),
+        optparse.Option("-n", "--no-daemon",  dest="nodaemon",  help="Define sl2d log file",  action="store_true",  default=False),
+        optparse.Option("-v", "--verbose",    dest="verbosity", help="Define sl2d verbose level",  action="count", default=0)]
         )
 
     (options, args) = parser.parse_args()
